--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,39 +1,49 @@
 html, body {
   z-index: 1;
-  margin: 0;
-  height: 100%;
-}
-
-#main-container {
+  margin: 0px;
+  padding: 0px;
+  color: white;
+  height: 0px;
   background-color: black;
-  position: relative;
+}
+#main-container {
   min-height: 100vh;
-
+}
+.main-footer{
+  position: absolute;
+  bottom: 0;
+  height: 2.5rem;
 }
 
-.spacer {
-  margin-bottom: 2%;
+.card-project-button {
+  color: white;
 }
-#ProjectTitle {
+
+.test {
+  /* background-color: red; */
+  height: 400px;
+  min-width: 300px;
+  max-width: 800px;
+}
+
+.card-button-group {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.main-projects {
+  margin: 50px 25px;
+  padding: 0px;
+  min-width: 300px;
+  max-width: 800px;
+}
+
+.project-body {
   color: black;
 }
 
-#CardButtonText {
-  color: white;
-}
-.defaultText {
-  color: black,
-}
-.changeText {
- color: white; 
-}
-#mainDiv {
-  background-color: black;
-}
-
-#centerDiv {
-  text-align: center;
-}
 .contact-clean {
   background: #f1f7fc;
   padding: 80px 0;
@@ -122,11 +132,4 @@ html, body {
   background-color: #055ada !important;
   margin-top: 15px;
   color: #fff;
-}
-
-#NavBarStyle {
-  z-index: 2;
-  top: 0;
-  float: left;
-  display: block;
 }
